# proyectosParalela2020

./: README.md
openMPI/: .gitignore  CMakeLists.txt  README.md  main.cpp
openMPI/src/: main.cpp
rest/: .eslintrc.js  .prettierrc  README.md  app.js  package-lock.json  package.json
rest/config/: config.js
rest/controllers/: index.js
rest/migrations/: 20200629182804-create-postulant.js  20200629183007-create-career.js  20200629183045-create-postulation.js
rest/models/: career.js  index.js  postulant.js  postulation.js
rest/routes/: index.js
rest/seeders/: 20200714215223-careers.js
soap/: README.md  careers.json  db.sql  index.php  utils.php
